helm update true

--- a/kubeovn-helm/templates/central-deploy.yaml
+++ b/kubeovn-helm/templates/central-deploy.yaml
@@ -69,6 +69,8 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.podIPs
+            - name: ENABLE_BIND_LOCAL_IP
+              value: "true"
           resources:
             requests:
               cpu: 300m
