--- a/kubeovn-helm/templates/ovncni-ds.yaml
+++ b/kubeovn-helm/templates/ovncni-ds.yaml
@@ -94,6 +94,8 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: status.podIPs
+          - name: ENABLE_BIND_LOCAL_IP
+            value: "true"
         volumeMounts:
           - name: host-modules
             mountPath: /lib/modules
