--- a/kubeovn-helm/templates/controller-deploy.yaml
+++ b/kubeovn-helm/templates/controller-deploy.yaml
@@ -112,7 +112,7 @@ spec:
                 fieldRef:
                   fieldPath: status.podIPs
             - name: ENABLE_BIND_LOCAL_IP
-              value: "true"
+              value: "{{- .Values.func.ENABLE_BIND_LOCAL_IP }}"
           volumeMounts:
             - mountPath: /etc/localtime
               name: localtime
