--- a/yamls/ovn.yaml
+++ b/yamls/ovn.yaml
@@ -292,6 +292,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: POD_IPS
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIPs
           resources:
             requests:
               cpu: 500m
