--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ dist/windows/kube-ovn-daemon.exe
 test/e2e/ovnnb_db.*
 test/e2e/ovnsb_db.*
 kube-ovn.yaml
+kube-ovn-crd.yaml
 ovn.yaml
 ovn-ic-0.yaml
 ovn-ic-1.yaml
@@ -18,4 +19,3 @@ vpc-nat-gateway.tar
 image-amd64.tar
 image-arm64.tar
 test/**/*.test
-test/**/network.json
