--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -120,7 +120,7 @@ jobs:
 
       - name: Export E2E directory
         run: |
-          if [ '${{ github.base_ref || github.ref }}' = '${{ github.event.repository.default_branch }}' ]; then
+          if [ '${{ github.base_ref || github.ref_name }}' = '${{ github.event.repository.default_branch }}' ]; then
             echo "E2E_DIR=." >> "$GITHUB_ENV"
           else
             echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
@@ -213,7 +213,7 @@ jobs:
 
       - name: Export E2E directory
         run: |
-          if [ '${{ github.base_ref || github.ref }}' = '${{ github.event.repository.default_branch }}' ]; then
+          if [ '${{ github.base_ref || github.ref_name }}' = '${{ github.event.repository.default_branch }}' ]; then
             echo "E2E_DIR=." >> "$GITHUB_ENV"
           else
             echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
@@ -302,7 +302,7 @@ jobs:
 
       - name: Export E2E directory
         run: |
-          if [ '${{ github.base_ref || github.ref }}' = '${{ github.event.repository.default_branch }}' ]; then
+          if [ '${{ github.base_ref || github.ref_name }}' = '${{ github.event.repository.default_branch }}' ]; then
             echo "E2E_DIR=." >> "$GITHUB_ENV"
           else
             echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
@@ -366,7 +366,7 @@ jobs:
 
       - name: Export E2E directory
         run: |
-          if [ '${{ github.base_ref || github.ref }}' = '${{ github.event.repository.default_branch }}' ]; then
+          if [ '${{ github.base_ref || github.ref_name }}' = '${{ github.event.repository.default_branch }}' ]; then
             echo "E2E_DIR=." >> "$GITHUB_ENV"
           else
             echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
@@ -422,7 +422,7 @@ jobs:
       - name: Run E2E
         working-directory: ${{ env.E2E_DIR }}
         env:
-          E2E_BRANCH: ${{ github.base_ref || github.ref }}
+          E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
           E2E_IP_FAMILY: ${{ matrix.ip-family }}
           E2E_NETWORK_MODE: ${{ matrix.mode }}
         run: make kube-ovn-conformance-e2e
@@ -601,7 +601,7 @@ jobs:
 
       - name: Export E2E directory
         run: |
-          if [ '${{ github.base_ref || github.ref }}' = '${{ github.event.repository.default_branch }}' ]; then
+          if [ '${{ github.base_ref || github.ref_name }}' = '${{ github.event.repository.default_branch }}' ]; then
             echo "E2E_DIR=." >> "$GITHUB_ENV"
           else
             echo "E2E_DIR=test/e2e/source" >> "$GITHUB_ENV"
