--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
     - master
+    - release-*
     paths-ignore:
     - 'docs/**'
     - '**.md'
@@ -487,6 +488,9 @@ jobs:
           check-latest: true
         id: go
 
+      - name: Export Go full version
+        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+
       - name: Go cache
         uses: actions/cache@v3
         with:
@@ -935,7 +939,7 @@ jobs:
       - build-centos-compile
       - k8s-conformance-e2e
       # - k8s-netpol-e2e
-      # - cyclonus-netpol-e2e
+      - cyclonus-netpol-e2e
       - kube-ovn-conformance-e2e
       - kube-ovn-ic-conformance-e2e
       - lb-svc-e2e
