--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -8,13 +8,17 @@ on:
       - main
   pull_request:
 
+concurrency:
+  group: "${{ github.workflow }}-${{ github.ref }}"
+  cancel-in-progress: true
+
 env:
-  GO_VERSION: '1.18'
+  GO_VERSION: '1.19'
 
 jobs:
   golangci:
     name: lint
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
