--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -90,7 +90,7 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          make kind-install-${{ matrix.mode }}-${{ matrix.ip-family }}
+          VERSION=$version make kind-install-${{ matrix.mode }}-${{ matrix.ip-family }}
 
       - name: Run E2E
         env:
@@ -171,7 +171,7 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          make kind-install-${{ matrix.ip-family }}
+          VERSION=$version make kind-install-${{ matrix.ip-family }}
 
       - name: Run E2E
         run: make k8s-netpol-e2e
@@ -230,7 +230,7 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          make kind-install-${{ matrix.ip-family }}
+          VERSION=$version make kind-install-${{ matrix.ip-family }}
 
       - name: Run E2E
         run: make cyclonus-netpol-e2e
@@ -304,7 +304,7 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          make kind-install-${{ matrix.mode }}-${{ matrix.ip-family }}
+          VERSION=$version make kind-install-${{ matrix.mode }}-${{ matrix.ip-family }}
 
       - name: Run E2E
         env:
@@ -374,7 +374,7 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          make kind-install-ovn-ic
+          VERSION=$version make kind-install-ovn-ic
 
       - name: Run E2E
         env:
@@ -426,7 +426,7 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          sudo ENABLE_SSL=true make kind-install
+          sudo ENABLE_SSL=true VERSION=$version make kind-install
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -476,7 +476,7 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          make kind-install-underlay-logical-gateway-dual
+          VERSION=$version make kind-install-underlay-logical-gateway-dual
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -529,7 +529,7 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          make kind-install
+          VERSION=$version make kind-install
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -582,7 +582,7 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          make kind-install
+          VERSION=$version make kind-install
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -653,7 +653,7 @@ jobs:
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
           docker pull kubeovn/vpc-nat-gateway:$version
-          make kind-install-lb-svc
+          VERSION=$version make kind-install-lb-svc
 
       - name: Run E2E
         run: make kube-ovn-lb-svc-conformance-e2e
@@ -702,7 +702,7 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          make kind-install
+          VERSION=$version make kind-install
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -779,7 +779,7 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          make kind-install
+          VERSION=$version make kind-install
 
       - name: Run E2E
         run: make k8s-conformance-e2e
