--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -24,6 +24,9 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.10
+          - release-1.9
+          - release-1.8
         ip-family:
           - ipv4
           - ipv6
@@ -85,8 +88,9 @@ jobs:
       - name: Install Kube-OVN
         working-directory: test/e2e/k8s-network/branches/${{ matrix.branch }}
         run: |
-          docker pull kubeovn/kube-ovn:$(cat VERSION)
-          make kind-install-${{ matrix.mode }}-${{ matrix.ip-family }}
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          VERSION=$version make kind-install-${{ matrix.mode }}-${{ matrix.ip-family }}
 
       - name: Run E2E
         env:
@@ -104,6 +108,9 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.10
+          - release-1.9
+          - release-1.8
         ip-family:
           - ipv4
           - ipv6
@@ -162,8 +169,9 @@ jobs:
       - name: Install Kube-OVN
         working-directory: test/e2e/k8s-network/branches/${{ matrix.branch }}
         run: |
-          docker pull kubeovn/kube-ovn:$(cat VERSION)
-          make kind-install-${{ matrix.ip-family }}
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          VERSION=$version make kind-install-${{ matrix.ip-family }}
 
       - name: Run E2E
         run: make k8s-netpol-e2e
@@ -177,6 +185,9 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.10
+          - release-1.9
+          - release-1.8
         ip-family:
           - ipv4
           - ipv6
@@ -217,8 +228,9 @@ jobs:
       - name: Install Kube-OVN
         working-directory: test/e2e/k8s-network/branches/${{ matrix.branch }}
         run: |
-          docker pull kubeovn/kube-ovn:$(cat VERSION)
-          make kind-install-${{ matrix.ip-family }}
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          VERSION=$version make kind-install-${{ matrix.ip-family }}
 
       - name: Run E2E
         run: make cyclonus-netpol-e2e
@@ -232,6 +244,9 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.10
+          - release-1.9
+          - release-1.8
         ip-family:
           - ipv4
           - ipv6
@@ -287,8 +302,9 @@ jobs:
       - name: Install Kube-OVN
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: |
-          docker pull kubeovn/kube-ovn:$(cat VERSION)
-          make kind-install-${{ matrix.mode }}-${{ matrix.ip-family }}
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          VERSION=$version make kind-install-${{ matrix.mode }}-${{ matrix.ip-family }}
 
       - name: Run E2E
         env:
@@ -306,6 +322,8 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.10
+          - release-1.9
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
@@ -354,8 +372,9 @@ jobs:
       - name: Install Kube-OVN
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: |
-          docker pull kubeovn/kube-ovn:$(cat VERSION)
-          make kind-install-ovn-ic
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          VERSION=$version make kind-install-ovn-ic
 
       - name: Run E2E
         env:
@@ -371,6 +390,9 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.10
+          - release-1.9
+          - release-1.8
     steps:
       - uses: actions/checkout@v3
 
@@ -402,8 +424,9 @@ jobs:
       - name: Install Kube-OVN
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: |
-          docker pull kubeovn/kube-ovn:$(cat VERSION)
-          sudo ENABLE_SSL=true make kind-install
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          sudo ENABLE_SSL=true VERSION=$version make kind-install
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -418,6 +441,8 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.10
+          - release-1.9
     steps:
       - uses: actions/checkout@v3
 
@@ -430,7 +455,7 @@ jobs:
           ref: ${{ matrix.branch }}
           fetch-depth: 1
           path: test/e2e/kube-ovn/branches/${{ matrix.branch }}
-        
+
       - name: Install kind
         run: |
           curl -Lo ./kind https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-$(uname)-amd64
@@ -449,8 +474,9 @@ jobs:
       - name: Install Kube-OVN
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: |
-          docker pull kubeovn/kube-ovn:$(cat VERSION)
-          make kind-install-underlay-logical-gateway-dual
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          VERSION=$version make kind-install-underlay-logical-gateway-dual
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -465,6 +491,9 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.10
+          - release-1.9
+          - release-1.8
     steps:
       - uses: actions/checkout@v3
 
@@ -498,8 +527,9 @@ jobs:
         env:
           ENABLE_LB: "false"
         run: |
-          docker pull kubeovn/kube-ovn:$(cat VERSION)
-          make kind-install
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          VERSION=$version make kind-install
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -514,6 +544,9 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.10
+          - release-1.9
+          - release-1.8
     steps:
       - uses: actions/checkout@v3
 
@@ -547,8 +580,9 @@ jobs:
         env:
           ENABLE_NP: "false"
         run: |
-          docker pull kubeovn/kube-ovn:$(cat VERSION)
-          make kind-install
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          VERSION=$version make kind-install
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -616,9 +650,10 @@ jobs:
       - name: Install Kube-OVN
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: |
-          docker pull kubeovn/kube-ovn:$(cat VERSION)
-          docker pull kubeovn/vpc-nat-gateway:$(cat VERSION)
-          make kind-install-lb-svc
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          docker pull kubeovn/vpc-nat-gateway:$version
+          VERSION=$version make kind-install-lb-svc
 
       - name: Run E2E
         run: make kube-ovn-lb-svc-conformance-e2e
@@ -632,6 +667,9 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.10
+          - release-1.9
+          - release-1.8
     steps:
       - uses: actions/checkout@v3
 
@@ -662,8 +700,9 @@ jobs:
       - name: Install Kube-OVN
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: |
-          docker pull kubeovn/kube-ovn:$(cat VERSION)
-          make kind-install
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          VERSION=$version make kind-install
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
@@ -678,6 +717,9 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.10
+          - release-1.9
+          - release-1.8
     steps:
       - uses: actions/checkout@v3
       - uses: azure/setup-helm@v3
@@ -735,8 +777,9 @@ jobs:
       - name: Install Kube-OVN
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: |
-          docker pull kubeovn/kube-ovn:$(cat VERSION)
-          make kind-install
+          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
+          docker pull kubeovn/kube-ovn:$version
+          VERSION=$version make kind-install
 
       - name: Run E2E
         run: make k8s-conformance-e2e
