--- a/kubeovn-helm/templates/kube-ovn-crd.yaml
+++ b/kubeovn-helm/templates/kube-ovn-crd.yaml
@@ -334,6 +334,9 @@ spec:
       - name: ExcludeIPs
         type: string
         jsonPath: .spec.excludeIps
+      - name: U2OInterconnectionIP
+        type: string
+        jsonPath: .status.u2oInterconnectionIP
       schema:
         openAPIV3Schema:
           type: object
@@ -350,6 +353,8 @@ spec:
                 v6usingIPs:
                   type: number
                 activateGateway:
+                  type: string
+                u2oInterconnectionIP:
                   type: string
                 conditions:
                   type: array
@@ -429,6 +434,8 @@ spec:
                   type: boolean
                 htbqos:
                   type: string
+                u2oInterconnection:
+                  type: boolean
   scope: Cluster
   names:
     plural: subnets
