--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -123,6 +123,9 @@ spec:
       - name: ExcludeIPs
         type: string
         jsonPath: .spec.excludeIps
+      - name: U2OInterconnectionIP
+        type: string
+        jsonPath: .status.u2oInterconnectionIP
       schema:
         openAPIV3Schema:
           type: object
@@ -139,6 +142,8 @@ spec:
                 v6usingIPs:
                   type: number
                 activateGateway:
+                  type: string
+                u2oInterconnectionIP:
                   type: string
                 conditions:
                   type: array
@@ -218,6 +223,8 @@ spec:
                   type: boolean
                 htbqos:
                   type: string
+                u2oInterconnection:
+                  type: boolean
   scope: Cluster
   names:
     plural: subnets
